Cambios actulizados en header

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -43,9 +43,21 @@ import '@fontsource-variable/oswald';
 
 	body {
 		font-family: "Quattrocento", serif;
+		background-color: #EFEFEE;
+		color: var(--ttlcolor);
+		width: 100%;
+		max-width: 1366px;
+		margin: 0 auto;
 	}
 	h1,h2,h3,h4,h5,h6 {
-		font-family: "Oswald", sans-serif;
+		font-family: "Oswald Variable", sans-serif;
 
+	}
+	li{
+		list-style-type: none;
+	}
+
+	a{
+		text-decoration: none;
 	}
 </style>
