--- a/src/sections/Header.astro
+++ b/src/sections/Header.astro
@@ -84,8 +84,11 @@
 
 <style>
     header {
+        width: 85%;
+        margin: 0 auto;
         position: sticky;
         top: 0;
+        z-index: 10;
         animation: height-all 500ms ease-in-out;
         animation: scroll-header both;
         animation-timeline: scroll(root);
@@ -124,8 +127,8 @@
                     align-items: center;
                     li {
                         a {
-                            color: var(--ttlcolor);
                             position: relative;
+                            color: var(--ttlcolor);
                         }
                         a::before {
                             content: "";
@@ -176,6 +179,7 @@
             border-radius: 0 0 1rem 1rem;
             box-shadow: 0px 10px 10px #00000030;
             --scale: 0;
+            scale: 1.1;
             /* --display: none; */
         }
     }
@@ -183,8 +187,6 @@
     /* tablet */
     @media (min-width: 768px) {
         header {
-            width: 85%;
-            margin: 0 auto;
             animation: none;
             position: relative;
             .container {
@@ -192,14 +194,14 @@
                 grid-template-areas: "nav logo aside";
                 align-items: center;
 
-                nav{
-                    ul{
+                nav {
+                    ul {
                         justify-content: flex-start;
-                        gap: .5rem;
+                        gap: 0.5rem;
                     }
                 }
-                aside{
-                    ul{
+                aside {
+                    ul {
                         justify-content: flex-end;
                     }
                 }
