Cambios hechos para el main-hero

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -43,7 +43,7 @@ import '@fontsource-variable/oswald';
 
 	body {
 		font-family: "Quattrocento", serif;
-		background-color: #EFEFEE;
+		background-color: #f3f3f3;
 		color: var(--ttlcolor);
 		width: 100%;
 		max-width: 1366px;
@@ -51,6 +51,8 @@ import '@fontsource-variable/oswald';
 	}
 	h1,h2,h3,h4,h5,h6 {
 		font-family: "Oswald Variable", sans-serif;
+		font-weight: 700;
+		text-wrap: balance;
 
 	}
 	li{
@@ -59,5 +61,8 @@ import '@fontsource-variable/oswald';
 
 	a{
 		text-decoration: none;
+	}
+	p{
+		color: var(--phrcolor);
 	}
 </style>
